# kexedit-backend

./: CLAUDE.md  Cargo.toml  context.md
kexedit-core/: Cargo.toml  context.md
kexedit-core/src/: curvature.rs  forces.rs  frame.rs  frame_change.rs  keyframe.rs  lib.rs  math.rs  physics_params.rs  point.rs  sim.rs
kexedit-core/tests/: frame_tests.rs  math_tests.rs
kexedit-ffi/: Cargo.toml  context.md
kexedit-ffi/src/: lib.rs
kexedit-nodes/: Cargo.toml  context.md
kexedit-nodes/src/: anchor.rs  bridge.rs  copy_path.rs  curved.rs  force.rs  geometric.rs  golden.rs  lib.rs  point_comparer.rs  reverse.rs  reverse_path.rs
layers/: structure.md
test-data/: shuttle.json
