[package]
name = "kexedit-nodes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kexedit-core = { path = "../kexedit-core" }

[dev-dependencies]
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["rlib"]
